<resources>
    <string name="app_name">VideoList</string>
    <string name="menu_settings">Settings</string>
    <string name="dialog_title">prompt</string>
    <string name="button_ok">Determine</string>
    <string name="button_cancel">Cancel</string>
    <string name="prompt_stop_recorde">View the video file will stop recording, whether to view?</string>
    <string name="prompt_lock_video">Lock selected videos?</string>
    <string name="prompt_unlock_video">Unlock selected videos?</string>
    <string name="prompt_delete_video">Delete selected videos?</string>
    <string name="prompt_delete_picture">Delete selected image?</string>
    <string name="dialog_message">Operation in progress …</string>
    <string name="normal_video">Normal</string>
    <string name="lock_video">Lock</string>
    <string name="cloud_video">cloud video</string>
    <string name="picture">Picture</string>
    <string name="select_all">Select all</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="delete">Delete</string>
    <string name="loading_data">Loading data…</string>
    <string name="video_playback_failed">Video playback failed</string>
    <string name="stop_dialog_title">Tips</string>
    <string name="btn_sure">Confirm</string>
    <string name="btn_cannel">Cancel</string>
    <string name="stop_recording">Viewing the video file will stop recording. Do you want to view it?</string>
    <string name="action_settings">Settings</string>

    <string name="already_first_video">This is already the first video</string>
    <string name="already_last_video">This is already the last video</string>
    <string name="exit_app">Click again to exit</string>
    <string name="not_video">No video</string>
    <string name="ok">確定</string>
    <string name="cancel">取消</string>
</resources>
